<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/darius" />

    <TextView
        android:id="@+id/text_re"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ima"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/yes" />

    <TextView
        android:id="@+id/ment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ima"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:text="@string/no"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/ok"
        android:textSize="20dp" />

</RelativeLayout>